--- a/css/style.css
+++ b/css/style.css
@@ -2481,6 +2481,10 @@ a:hover {
   background-position: center;
   background-repeat: no-repeat;
   cursor: pointer;
+  transition: 0.6s ease-in-out;
+}
+.detailModule.video .videoArea:hover::after {
+  background-image: url("../images/btn--play--h.svg");
 }
 .detailModule.video .videoArea:hover img {
   transform: scale(1.05);
